# ViT_from_scratch

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  vit_transformer.ipynb
configs/training/: classification_cifar10.yaml  classification_fake.yaml  classification_stl10.yaml  classification_stl10_small.yaml  classification_tiny_imagenet.yaml  dino_cifar10.yaml  dino_fake.yaml  dino_stl10.yaml  dino_tiny_imagenet.yaml  mae_cifar10.yaml  mae_fake.yaml  mae_stl10.yaml  mae_tiny_imagenet.yaml
notebooks/: 01_vit_building_blocks.ipynb  02_embedding_methods.ipynb  03_training_walkthrough.ipynb  04_training_methods.ipynb  experiment_results.ipynb
scripts/: download_external_images.py
src/vit_from_scratch/: __init__.py  artifacts.py  attention.py  classification.py  config.py  core.py  data.py  dino.py  embedding.py  encoder.py  evaluation.py  external_images.py  masked_autoencoder.py  mlp.py  model.py  patch_embedding.py  progress.py  run_utils.py  train.py  training.py  training_config.py  training_loop.py  visualization.py
tests/: test_artifacts.py  test_attention_visualization.py  test_building_blocks.py  test_classification_experiments.py  test_devices.py  test_dino_experiments.py  test_embeddings.py  test_evaluation_metrics.py  test_external_images.py  test_mae_experiments.py  test_notebooks_clean.py  test_progress.py  test_public_training_api.py  test_rope2d.py  test_smoke.py  test_training.py  test_training_config.py  test_training_methods.py
